@@ -1,7 +1,8 @@
 $Id$
 
 OpenDNSSEC 1.3.15rc1
-
+* SUPPORT-75: Signer Engine: Fix double free crash in case of HSM connection
+  error during signing [OPENDNSSEC-452].
 * OPENDNSSEC-428: Add option for 'ods-ksmutil key generate' to take total 
   number of zones as a parameter
 * SUPPORT-58: Extend ods-signer sign <zone> with --serial <nr> so that the user
